--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <section class="container">
         <nav class="header__navigation">
           <a href="#" class="header__logo">Startup</a>
 
@@ -49,7 +49,7 @@
         <h1 class="header__title">welcom to startup</h1>
         <p class="header__subtitle">Your Favourite Creative Agency Template</p>
         <button class="header__button">get started</button>
-      </div>
+      </section>
     </header>
 
     <section class="services">
@@ -58,9 +58,11 @@
         We offer ipsum dolor sit amet, consetetur sadipscing elitr amet
       </p>
 
-      <ul class="services__list">
+      <ul class="services__list container">
         <li class="services__list-item">
-          <h3 class="services__list-item-title">Clean Typography</h3>
+          <h3 class="services__list-item-title services__list-item-title_font">
+            Clean Typography
+          </h3>
           <p class="services__list-item-subtitle">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
             maxime quam architecto quo inventore harum ex magni, dicta impedit.
@@ -69,7 +71,9 @@
         </li>
 
         <li class="services__list-item">
-          <h3 class="services__list-item-title">Rock Solid Code</h3>
+          <h3 class="services__list-item-title services__list-item-title_code">
+            Rock Solid Code
+          </h3>
           <p class="services__list-item-subtitle">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
             maxime quam architecto quo inventore harum ex magni, dicta impedit.
@@ -78,7 +82,11 @@
         </li>
 
         <li class="services__list-item">
-          <h3 class="services__list-item-title">Expert Support</h3>
+          <h3
+            class="services__list-item-title services__list-item-title_support"
+          >
+            Expert Support
+          </h3>
           <p class="services__list-item-subtitle">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima
             maxime quam architecto quo inventore harum ex magni, dicta impedit.
